Add semester draft schedule overview
